[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://scenes/health_bar.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/player.png" type="Texture" id=3]
[ext_resource path="res://sprites/gun.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 18.8689
height = 20.8162

[sub_resource type="CircleShape2D" id=2]
radius = 49.3332

[node name="player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="health_bar" parent="." instance=ExtResource( 2 )]
visible = false
margin_top = -32.0
margin_bottom = -28.0

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="sprite2" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="gun" type="Sprite" parent="."]
position = Vector2( 0, 8 )
texture = ExtResource( 4 )

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
drag_margin_h_enabled = false
drag_margin_v_enabled = false

[node name="damage_area" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="damage_area"]
shape = SubResource( 2 )

[node name="timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
autostart = true
[connection signal="body_entered" from="damage_area" to="." method="_on_damage_area_body_entered"]
[connection signal="body_exited" from="damage_area" to="." method="_on_damage_area_body_exited"]
